# organization-page-bffe

./: .flake8  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.contract.yml  docker-compose.yml  fdk-organization-bff.yaml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: audit.yaml  constraints.txt  coverage.yml  deploy-demo-digdir.yaml  deploy-demo.yaml  deploy-prod&demo.yaml  deploy-prod-digdir.yaml  deploy-prod.yaml  deploy-staging-digdir.yaml  deploy-staging.yaml
mock/: datasets  jhk
mock/__files/: datasets.txt
mock/contract_mappings/: organizations-21af49fb-e881-4c42-8228-26f3fc43ea9c.json
mock/mappings/: 837902622-2062c348-91e3-4d5b-b5dd-2a5cd231cbfc.json  916573154-47b7519e-2fb0-422b-9ffe-bc0429768915.json  920204368-9f297214-0a20-4cc4-baac-16a2544f924b.json  937891512-3ef2ebed-49e3-414a-9f9a-3d44a376441d.json  937893922-245e342d-642e-48d2-ba6c-b39b5a112f83.json  937896581-acab177d-05e3-44fc-9c31-27b5029f63c4.json  937901925-805aeb27-4f63-4971-ad5e-3a28c798d098.json  938275130-bda6071b-8f6b-4e66-9a2d-96fe9d17370a.json  958935420-c9e28887-d478-41d7-8b82-1f6bc5c6f480.json  970018131-b2943033-6e85-4af9-bb8d-17cb8cd189b0.json  971035854-16a02429-4d46-4d38-a163-fae49cbb445f.json  971527412-f191d2f0-f52d-452d-9a9b-20e2705c0ede.json  980374181-8e9a714c-97c2-4ea7-bf35-573d12c0ed5b.json  983544622-2c5b8dbe-5285-4097-abef-f38e2f758dbd.json  983544622-c8bf0240-9af0-441c-abfb-a3d30b46cf3d.json  apis-007c32f2-966a-4eaa-9367-887d5f8d2774.json  apis-010e9fe2-3cc0-45cd-982a-aa1145615f9e.json  apis-01527d30-fb4e-4816-9e45-e68942e12e60.json  apis-01c6f306-4ddd-4100-99a6-ec530838aba0.json  apis-01e41690-5f50-4a85-bc2c-a10eefe116ff.json  apis-021b69e4-7aff-49f3-a87e-7182031f894d.json  apis-0233bfc9-98c5-4e82-a5cb-4914f4338451.json  apis-0291f090-ab6c-435c-900a-451d86e7078a.json  apis-03c61618-dba8-413e-8660-32449741e10a.json  apis-04811fc1-b0b3-473e-a826-ba12882b27dc.json  apis-056b2718-0217-42ef-b9eb-8ff7d6f979d8.json  apis-058bce63-559d-40a3-a101-0824e8718ac5.json  apis-062efa16-e9a5-4a68-8dc4-ca7503089a01.json  apis-06627c05-4576-415d-ad41-08c76f40bd83.json  apis-067acd8b-de0a-455e-9c6c-bfeb43b26edb.json  apis-07ac544f-8669-4292-8ec6-64fbcaf6fb4d.json  apis-091c864c-f68f-45a2-80dd-d00bcbf5ada0.json  apis-091d807f-fb6c-438c-958a-5ab49c664697.json  apis-0920ac9d-f403-4e51-8152-6bb17eb374ff.json  apis-09aa4bc3-8c55-4a22-bdc4-2c93144e5c98.json  apis-0a55ed65-17eb-4bea-a73c-6aa87eb99848.json  apis-0a62da97-dd86-49c0-aca1-4533f2b5d168.json  apis-0b4685ba-6c71-4b67-803d-639fa25add36.json  apis-0c3052c9-ede1-44a6-983b-a7231a7dd8e8.json  apis-0c352116-3361-43e6-91d3-3091dd49fd6a.json  (+2329 more)
mock_mappings/mappings/: api_enheter_910244132-d23d74f4-8c16-4e8f-8051-77453f9db9d1.json  api_enheter_971203420-ea782229-91cd-4edb-b447-6929d597da6a.json  api_enheter_974767880-be4f8f7c-8604-46a2-a767-b56bf2f04722.json  assessment_catalog_rating-72b0e4db-8f2a-434f-b2d8-0800691b62c4.json  assessment_catalog_rating-c29a5532-fc62-4408-9202-9530316357cd.json  dataset_scores-948ee726-636f-4e62-ad22-034c1f436632.json  dataset_scores-a50f1eea-bf8a-4a62-bdf8-794a3d1df1d3.json  dataset_scores-a50f1eea-bf8a-4a62-bdf8-794a3d1df1d4.json  dataset_scores-e45d2801-1e30-424f-ba87-d8744e7047c8.json  organizations-974767880-e0062301-ac17-4d9f-9a60-cddda3f938a7.json  organizations-981eeb04-f24a-41bb-9c3a-87cd964a3ff3.json  organizations-a098fc86-0400-47c9-9d27-6a437003cc63.json  organizations-bb7cd41c-4ef0-42f8-be8f-8fde4b2be862.json  organizations-fb1f339c-1ce3-43e1-a391-dfbe99d9207e.json  organizations_910244132-94779492-4e8c-4790-8547-ff34866d3411.json  organizations_910298062-6998ea5c-50b5-4a30-a8bc-d9c7a5e627d0.json  organizations_971203420-7df5b8ce-a3cc-4658-858a-2ae6c005f2cc.json  rating_catalog-948ee726-636f-4e62-ad22-034c1f436632.json  rating_catalog-a50f1eea-bf8a-4a62-bdf8-794a3d1df1d3.json  rating_catalog-a50f1eea-bf8a-4a62-bdf8-794a3d1df1d4.json  rating_catalog-e45d2801-1e30-424f-ba87-d8744e7047c8.json  reference-data_codes_openlicenses-1dcb47ce-558d-449f-a448-85a3f3eabae2.json  reference-data_ssb_fylke-organisasjoner-56a553ac-b936-486e-8032-ca169f62a8ad.json  reference-data_ssb_kommune-organisasjoner-e1038d3d-c6b1-48d0-b1c5-acf661750de7.json  sparql-09356022-3b25-41f3-8bed-bf475c8e1a4b.json  sparql-17e72e4a-7cd4-4285-b3e4-e66e4485eda8.json  sparql-231595e6-0ef7-4224-8b37-9b8f164aa528.json  sparql-3a7e8201-a9cd-4746-ba0e-489392e5f655.json  sparql-4108c775-4b73-4549-966b-d3bef34784c2.json  sparql-5e5c22de-2816-49ee-84a0-a9fcd5f88d0b.json  sparql-767627a7-28c2-4d65-b5ce-835effab0ee5.json  sparql-7ae7a4ad-1c7c-47a1-8f83-c154ca98dbba.json  sparql-a1e6391c-8b3b-493a-9ef7-db07e443faac.json  (+20 more)
src/: __init__.py  aggregation.py  endpoints.py  gunicorn_config.py  organization_utils.py  response_readers.py  responses.py  result_readers.py  service_requests.py  utils.py
src/sparql/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py  docker-compose.contract.yml  response_readers_test.py  responses.py  test_aggregation.py  test_data.py  test_organization_utils.py  test_responses.py  test_result_readers.py  test_service_requests.py  test_sparql.py  test_utils.py
(+53 files in other folders)
