[tool.poetry]
name = "fdk-organization-bff"
version = "0.1.0"
description = "Backend-for-frontend service that provides content for fdk portal's organization pages. "
authors = ["Nils Ove Tendenes <nils.ove@tendenes.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Informasjonsforvaltning/fdk-organization-bff"
repository = "https://github.com/Informasjonsforvaltning/fdk-organization-bff"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.8.6"
python-json-logger = "^2.0.7"
aiohttp-middlewares = "^2.2.0"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
pytest = "^7.4.4"
coverage = {extras = ["toml"], version = "^7.4.1"}
pytest-asyncio = "^0.23.3"
pytest-dotenv = "^0.5.2"
pytest-docker = "^2.0.1"
pytest-cov = "^4.1.0"
black = "^24.1.1"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.9.16"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
pep8-naming = "^0.13.3"
safety = "^2.3.5"
mypy = "1.8.0"
flake8-annotations = "^3.0.1"
codecov = "^2.1.13"
requests-mock = "^1.11.0"
pytest-mock = "^3.12.0"
pytest-aiohttp = "^1.0.5"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["fdk_organization_bff"]
omit = ["*__init__.py", "*gunicorn_config.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[build-system]
requires = ["poetry>=1.1.14"]
build-backend = "poetry.masonry.api"
